--- a/style.css
+++ b/style.css
@@ -24,12 +24,15 @@ html,body{
 	height: 40px;
 
 }
+#wrap header section marquee{
+	width: 100%;
+	background: rgba(255,0,0,0.3);
+}
 #wrap header section h1{
 	width: 100%;
 	height: 100%;
 	text-align: center;
 	line-height: 40px;
-	background: rgba(255,0,0,0.3);
 	
 }
 #wrap header nav{
@@ -88,3 +91,5 @@ html,body{
 	color: #666;
 	font-size: 12px;
 }
+
+@-
